@@ -1,4 +1,6 @@
 Changes to Version 2.0-13
+    o Added new function 'Boot' that is a simple front-end to boot::boot that will be useful when bootstrapping regression models.  Implemented for lm and glm, but this is likely to work for many other S3 regression models with and 'update' method, 'subset' argument.
+    
     o Fixed bug in 'compareCoefs' with non-full rank models
     
     o Modified 'bootCase' to return a matrix of class c("bootCase", "matrix") so generic functions can be written to summarize these objects.
